--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="action_settings">Settings</string>
     <string name="label_sign_out">Sign Out</string>
     <string name="label_my_points">My Points</string>
-    <string name="message_welcome">Welcome to My Timesheet App</string>
+    <string name="message_welcome">It’s Friday and You are here! Wow!</string>
+    <string name="message_tag_welcome">You sir are awesome!</string>
+    <string name="label_fill_timesheet">Fill in your timesheet</string>
 </resources>
